<resources>
    <string name="noneContentIMG">none</string>
    <string name="app_name">Prj_AMdEP</string>
    <string name="emailLoginTXT">Email</string>
    <string name="passwordLoginTXT">Clave</string>
    <string name="userLoginBTN">Ingresar</string>
    <string name="userSignupBTN">Registrarse</string>
    <string name="userDNI">Numero DNI</string>
    <string name="userDNICheckBTN">Validar DNI</string>
    <string name="userNameTXT">Nombre</string>
    <string name="userLastnameTXT">Apellidos</string>
    <string name="dialogSignupTitle">Ingresar</string>
    <string name="dialogSignupEmail">Email</string>
    <string name="dialogSignupNickname">Apodo</string>
    <string name="dialogSignupPassword">Clave</string>
    <string name="dialogSignupPhone">Numero Telefonico</string>
    <string name="dialogSignupSubmit">Enviar !</string>
    <string name="correctSubmit">Registro Exitoso.</string>
    <string name="errorSubmit">Registro Fallido</string>
    <string name="Processing">Procesando...</string>
    <string name="loginSuccess">Bienvenido a AMdEP !</string>
    <string name="loginError">Error en el login !</string>
    <string name="fragmentEmergency">Emergencia</string>
    <string name="exitSession">Salida...</string>
    <string name="emergencyTools">Herramientas de Emergencia</string>
    <string name="emergencyCall">Llamada de Emergencia</string>
    <string name="preventMap">Mapa Preventivo</string>
    <string name="Publications">Publicaciones</string>
    <string name="emergencyProfile">Configuracion Perfil</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="Logout">Cerrar Sesion</string>
    <string name="title_activity_prevent_maps">Mapa</string>
    <string name="actualPosition">Estas Aqui.</string>
    <string name="mapSearchText">Busca algunas direcciones aqui!</string>
    <string name="locationNotFound">Locacion no Encontrada!</string>
    <string name="menuFAM">Menu</string>
    <string name="chooseMenu">Elige Una</string>
    <string name="quicklyRoute">Ruta rápida</string>
    <string name="alternateRoute">Ruta alternativa</string>
    <string name="createPublication">Crear nueva publicacion</string>
    <string name="cretatePublicationTitle">Titulo Publicacion</string>
    <string name="textPublication">Inserte texto aqui.</string>
    <string name="userProfile">Perfil</string>
    <string name="userRecord">Registro Usuario</string>
    <string name="userPublications">Publicaciones Usuario</string>
    <string name="countPublications">N of publis</string>
    <string name="userInfo">Informacion Usuario</string>
    <string name="recordUser">Puntos de usuario</string>
    <string name="editUserProfile">Editar info</string>

</resources>
