<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <menu>
            <item android:title="@string/emergencyTools">
                <item
                    android:id="@+id/nav_emergencyCall"
                    android:icon="@drawable/emergencyCall"
                    android:title="@string/emergencyCall" />
                <item
                    android:id="@+id/nav_preventMap"
                    android:icon="@drawable/preventMap"
                    android:title="@string/preventMap" />
                <item
                    android:id="@+id/nap_publications"
                    android:icon="@drawable/publications"
                    android:title="@string/Publications" />
            </item>
        </menu>
    </group>
    <group>
        <item android:title="@string/emergencyProfile">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/editprofile"
                    android:title="@string/editProfile" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/logout"
                    android:title="@string/Logout" />
            </menu>
        </item>
    </group>

</menu>
