<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_menu"
    >

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txtQuicklyRoute"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/createPublication"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:background="@color/black_overlay"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/txtCreatePublicationTitle"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="25"
        android:hint="@string/cretatePublicationTitle"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine"
        android:lines="7"
        android:minLines="5"
        android:gravity="center|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="370dp"
        android:scrollbars="vertical"
        android:hint="@string/textPublication"  />

    <Button
        android:id="@+id/btnAddPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createPublication" />


</LinearLayout>