<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_menu"
    >

    <LinearLayout
        android:id="@+id/btnQuicklyRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:focusable="true">
            <ImageView
                android:id="@+id/imgQuickRoute"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/noneContentIMG"
                android:scaleType="fitXY"
                android:src="@drawable/quicklyroute"  />
            <TextView
                android:id="@+id/txtQuicklyRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/quicklyRoute"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:background="#FF0000"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:focusable="true">

            <ImageView
                android:id="@+id/imgAlternativeRoute"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/noneContentIMG"
                android:scaleType="fitXY"
                android:src="@drawable/alternateroute" />

            <TextView
                android:id="@+id/txtAlternativeRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:text="@string/alternateRoute"
                android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:background="#FF0000"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnHeatMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:focusable="true">
            <ImageView
                android:id="@+id/imgSecureRoute"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/noneContentIMG"
                android:scaleType="fitXY"
                android:src="@drawable/quicklyroute" />
            <TextView
                android:id="@+id/txtSecureRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/quicklyRoute"/>

    </LinearLayout>


</LinearLayout>